--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
             <div class="mainArea">
                 <label>Id:</label>
                 <input id="gameId" name="id" type="text" disabled />
-                <label>Name:</label>
+                <label>Title:</label>
                 <input id="name" name="name" type="text" required>
                 <button id="btnSave">Create</button>
                 <button id="btnDelete">Delete</button>
